include/tokenizer.h

/* RePairState: Training state for grammar rules.
 *
 * NOTE: rules[] is a fixed-size inline array of MAX_RULES entries.
 * sizeof(RePairState) is therefore ~2MB; always heap-allocate this struct
 * via repair_create() — never put it on the stack. */
typedef struct {
    uint32_t rule_count;
    Rule     rules[MAX_RULES];
    uint32_t next_sym;

    /* Internal training tables (not serialized) */
    uint64_t         *pair_keys;
    uint32_t         *pair_freq;
    struct SeqNode  **head_occ;
    struct SeqNode  **tail_occ;
    uint32_t         *heap;
    uint32_t         *heap_pos;
    uint32_t          heap_size;
    uint32_t          pair_ht_size;
    uint32_t          pair_count;
    uint32_t          live_count;
    void             *slab_head;
    bool              fatal_oom;

    /* Mmap support — byte offset of the serialised rules array */
    uint64_t          rules_offset;
} RePairState;
typedef struct {
    uint32_t      count;
    SyllableEntry entries[BASE_SYMBOL_OFFSET];   /* dense array, index = syllable ID */

    /* Open-addressing hash table (size 8192, load ≤ 50%) */
    uint8_t  ht_used[8192];
    uint16_t ht_keys[8192];
    char     ht_text[8192][MAX_TOKEN_CHARS];

    bool      frozen; /* true after stbl_seed_phonotactic(); no new entries */
    SylTrie  *trie;
} SyllableTable;
typedef struct Syllabifier {
    const SyllableTable *stbl;
    bool is_vowel[256];  /* byte-indexed vowel fast path */
    bool is_nasal[256];  /* byte-indexed nasal fast path */
    bool frozen;
} Syllabifier;
/* GrammarPruner: post-training analysis pass */
typedef struct {
    RePairState        *rs;
    const SyllableTable *stbl;
    char              **expansions;      /* rule_id → UTF-8 expansion string */
    uint32_t           *expansion_lens;
    bool               *expanded;
    bool                is_frozen;
    bool                in_expand[MAX_RULES]; /* cycle detection */
    bool                fatal_oom;
} GrammarPruner;
/* TokenizerStats: lightweight counters.
 * Incremented via STAT_INC/STAT_ADD macros which become no-ops when
 * ENABLE_STATS == 0. */
typedef struct {
    uint64_t syllabify_calls;
    uint64_t syllables_produced;
    uint64_t tokenize_calls;
    uint64_t tokens_produced;

    /* LOUDS traversal telemetry */
    atomic_uint_fast64_t louds_single_syl_fallbacks;
    atomic_uint_fast64_t louds_multi_syl_matches;
    atomic_uint_fast64_t louds_single_syl_matches;
    atomic_uint_fast64_t fast_path_hits;
    atomic_uint_fast64_t trie_traversals;
} TokenizerStats;
/* -----------------------------------------------------------------------
 * LOUDS CSR Trie
 * The primary token-lookup structure used during inference.
 * "CSR" = Compressed Sparse Row — each node stores (first_edge, edge_count)
 * into a flat edge array, similar to CSR sparse-matrix format.
 * ----------------------------------------------------------------------- */
typedef struct {
    /* Layer 2: Split CSR trie (production inference path) */
    uint32_t *row_ptr;     /* node_count + 1 entries */
    uint16_t *labels;      /* edge_count entries */
    uint32_t *next_node;   /* edge_count entries */
    uint32_t *terminals;   /* edge_count entries (0 = none) */
    
    uint32_t  node_count;
    uint32_t  edge_count;
    bool      has_csr;

    /* Layer 1: legacy flat representation (used by training and stream_tokenizer) */
    uint8_t  *klens;
    uint16_t *labels_legacy; /* Renamed to avoid collision */
    uint32_t *token_ids;
    uint32_t *koffs;
    uint32_t *rank1_sb;
    uint32_t  bv_len;
    uint32_t  sb_count;

    /* Fast-path tables (indexed by syllable ID) */
    uint32_t fast_token[8192];
    bool     can_extend[8192];

    /* O(1) root-level acceleration */
    uint32_t first_index[BASE_SYMBOL_OFFSET];
    uint32_t first_count[BASE_SYMBOL_OFFSET];

    uint32_t  n_entries;
    uint32_t  label_count;
    uint32_t  csr_node_count; /* used by mmap loader to compute sub-section sizes */
    uint32_t  csr_edge_count;
    void     *louds_bv;
} LOUDS;
/* -----------------------------------------------------------------------
 * Tokenizer
 * ----------------------------------------------------------------------- */

typedef struct {
    uint16_t cv_to_token[65536];
    uint32_t space_cv_to_token[65536];
} __attribute__((aligned(64))) TokenizerFastPaths;
typedef struct {
    SyllableTable *stbl;
    Syllabifier   *syl;
    RePairState   *rs;
    GrammarPruner *gp;
    LOUDS         *louds;
    uint32_t       vocab_size;
    char         **gp_expansions;
    const char   **id_to_str;

    TokenizerStats stats;

    TokenizerFastPaths *fast_paths;
    uint16_t byte_to_syl[65536];
    uint16_t byte_to_token[256];
    uint32_t byte_direct[256];

    uint16_t cv_dense_keys[DENSE_HASH_SIZE];
    uint32_t cv_dense_vals[DENSE_HASH_SIZE];
    uint16_t sp_dense_keys[DENSE_HASH_SIZE];
    uint32_t sp_dense_vals[DENSE_HASH_SIZE];
    char   **morph_strings;

    void     *mmap_addr;
    size_t    mmap_len;
} Tokenizer;
/* Top-level tokenizer lifecycle */
Tokenizer  *tokenizer_build(const char **docs, uint32_t n_docs);
/* Encoding */
int tokenizer_encode(const Tokenizer *t, const char *text,
                     uint32_t *out, uint32_t out_cap);
const char *tokenizer_decode(const Tokenizer *t, uint32_t token_id);
/* Persistence */
int        tokenizer_save(const Tokenizer *t, const char *path);
Tokenizer *tokenizer_load(const char *path);